--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Abq-DI-rb0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -70,6 +70,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haf-Zs-sls" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="623" y="240"/>
+        </scene>
+        <!--World View Controller-->
+        <scene sceneID="s91-ep-Tom">
+            <objects>
+                <collectionViewController storyboardIdentifier="BTC2WorldViewController" autoresizesArchivedViewToFullSize="NO" id="Abq-DI-rb0" customClass="BTC2WorldViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="IMj-NX-fKA">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewLayout key="collectionViewLayout" id="c6S-p8-Ka1" customClass="BTC2CircleLayout"/>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoboCell" id="bQl-07-tPb" customClass="BTC2RobotViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="frC-tZ-C2N" customClass="BTC2RobotView">
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="frC-tZ-C2N" firstAttribute="leading" secondItem="bQl-07-tPb" secondAttribute="leading" type="default" id="2hX-kH-dZi"/>
+                                    <constraint firstItem="frC-tZ-C2N" firstAttribute="bottom" secondItem="bQl-07-tPb" secondAttribute="bottom" type="default" id="UW3-sy-fOH"/>
+                                    <constraint firstItem="frC-tZ-C2N" firstAttribute="trailing" secondItem="bQl-07-tPb" secondAttribute="trailing" type="default" id="Ymz-9e-koF"/>
+                                    <constraint firstItem="frC-tZ-C2N" firstAttribute="top" secondItem="bQl-07-tPb" secondAttribute="top" type="default" id="gGC-vX-iHv"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="roboView" destination="frC-tZ-C2N" id="Pab-me-gUK"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Abq-DI-rb0" id="vYO-6k-OLi"/>
+                            <outlet property="delegate" destination="Abq-DI-rb0" id="Nli-2D-nla"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rkv-Tx-7fp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="208" y="725"/>
         </scene>
         <!--New Transaction View Controller-->
         <scene sceneID="aiR-aU-szc">
@@ -180,33 +223,6 @@
                                 </connections>
                             </tableViewCell>
                         </prototypes>
-                        <collectionViewLayout key="collectionViewLayout" id="lM8-LH-S9H" customClass="BTC2CircleLayout"/>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoboCell" id="rGT-cE-5d6" customClass="BTC2RobotViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dor-eF-maR" customClass="BTC2RobotView">
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <constraints>
-                                    <constraint firstItem="Dor-eF-maR" firstAttribute="top" secondItem="rGT-cE-5d6" secondAttribute="top" type="default" id="3UB-Ld-mhs"/>
-                                    <constraint firstItem="Dor-eF-maR" firstAttribute="trailing" secondItem="rGT-cE-5d6" secondAttribute="trailing" type="default" id="Lg2-qU-zXJ"/>
-                                    <constraint firstItem="Dor-eF-maR" firstAttribute="leading" secondItem="rGT-cE-5d6" secondAttribute="leading" type="default" id="og8-BV-lsC"/>
-                                    <constraint firstItem="Dor-eF-maR" firstAttribute="bottom" secondItem="rGT-cE-5d6" secondAttribute="bottom" type="default" id="vXw-os-Sia"/>
-                                </constraints>
-                                <size key="customSize" width="100" height="100"/>
-                                <connections>
-                                    <outlet property="roboView" destination="Dor-eF-maR" id="FVF-oy-hei"/>
-                                </connections>
-                            </collectionViewCell>
-                        </cells>
                         <connections>
                             <outlet property="dataSource" destination="LOA-vG-aoB" id="M7P-dO-kuw"/>
                             <outlet property="delegate" destination="LOA-vG-aoB" id="uu5-KC-2xe"/>
@@ -219,6 +235,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="BTC2CircleLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2CircleLayout.h"/>
+        </class>
         <class className="BTC2NameViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2NameViewController.h"/>
             <relationships>
@@ -234,6 +253,7 @@
                 <relationship kind="outlet" name="equivalentValueLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
             </relationships>
+        </class>
         <class className="BTC2RobotView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2RobotView.h"/>
         </class>
@@ -242,15 +262,6 @@
             <relationships>
                 <relationship kind="outlet" name="roboView" candidateClass="BTC2RobotView"/>
             </relationships>
-        </class>
-        <class className="BTC2ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2ViewController.h"/>
-        </class>
-        <class className="BTC2WorldViewController" superclassName="UICollectionViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2WorldViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="BTC2TransactionCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2TransactionCell.h"/>
@@ -266,6 +277,24 @@
         </class>
         <class className="BTC2ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2ViewController.h"/>
+        </class>
+        <class className="BTC2WorldViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BTC2WorldViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
